# NES

./: README.md
code/cpp_console_debug/data/: 6502.txt  INS_INTRO.txt  main_loop_for_ins.txt
code/cpp_console_debug/src/: CMakeLists.txt  config.h  cpu_test  cpu_test.cpp  ins_test  mif2bin  ppu_rom_test  ppu_rom_test.cpp
code/cpp_console_debug/src/6502_simple/: 6502.cpp
code/cpp_console_debug/src/cpu/: Makefile  cpu.cpp  instruction.cpp  instruction.h  joystick.h  memory_manager.cpp  memory_map.h  ppu.h  readme.txt
code/cpp_console_debug/src/format/: mif2bin.cpp  nes2bin.cpp
code/cpp_console_debug/src/tool/: Makefile  file_io.cpp
code/cpp_win32_gui/: Tank.cfpg  Tank.rc  cpu.cpp  cpu.h  instruction.h  main.cpp  memory_manager.cpp  memory_map.h  ppu.h
code/cpp_win32_gui/mingw5/: Tank.res  test.img
code/joystick_lz_final/: hs_err_pid6052.dmp  joystick_lz.xpr  vivado_5984.backup.jou  vivado_9484.backup.jou  vivado_9688.backup.jou  vivado_pid22096.str  vivado_pid2428.str  vivado_pid5984.str  vivado_pid8300.str
code/systemverilog/joystick/: vivado.jou  vivado_2796.backup.jou  vivado_6492.backup.jou  (+3 more)
code/version_2_WIN32-GUI/: Tank.cfp  instruction.cpp  joystick.cpp  joystick.h  memory_manager.h  ppu.LIB  ppu.cpp  resource.h  tool.cpp  tool.h
data/bit/: CPU_PPU_CHIP_TEST.bit  CPU_PPU_CHIP_TEST_eer_sp.bit  CPU_PPU_CHIP_TEST_no_scroll.bit  CPU_PPU_CHIP_TEST_sp_up.bit
poster/: Makefile  baposter.cls  poster.tex
poster/img/: Makefile  cpu_fsm.dot  high_level_arch_of_nes.dot  high_level_arch_of_nes.eps  ppu_fsm.dot  ppu_vga.dot  time.dot
poster/pix/: cpu_fsm.eps  ppu_fsm.eps  time.eps
(+577 files in other folders)
